.provarCaches/00D410000011HE0EAM/objects/rstk__pocontpick__c.object
<CustomObject>
    <description>pocontpick__c; BOC</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>TEXT(rstk__pocontpick_batchno__c) +  rstk__pocontpick_containerid__c +  rstk__pocontpick_ordno__c</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>TEXT( rstk__pocontpick_batchno__c ) + &apos;-&apos; +  rstk__pocontpick_containerid__c + &apos;-&apos; + rstk__pocontpick_ordno__c</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pocontpick_askmaxf__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Requested Shipping Temp Max (F)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocontpick_askminf__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Requested Shipping Temp Min (F)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocontpick_asnno__c</fullName>
        <label>ASN Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocontpick_batchno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Batch Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocontpick_bookingno__c</fullName>
        <label>Booking Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pocontpick_carrier__c</fullName>
        <label>Carrier</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pocontpick_comment__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__pocontpick_containerid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>TMM Ref</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pocontpick_conttype__c</fullName>
        <label>Size</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pocontpick_desc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pocontpick_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipName>pocontpicks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pocontpick_duedate__c</fullName>
        <label>ASN Due Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pocontpick_expdate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Lot Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__pocontpick_item__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>IPN Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pocontpick_loadondate__c</fullName>
        <label>Load On Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__pocontpick_loadontime__c</fullName>
        <label>Load On Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pocontpick_lotno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Lot Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pocontpick_lotnos__c</fullName>
        <inlineHelpText>Lot Numbers associated with this ASN Requisition</inlineHelpText>
        <label>Lot Numbers</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__pocontpick_ordno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>REQ Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pocontpick_pocontainer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Interim Container</label>
        <referenceTo>rstk__pocontainer__c</referenceTo>
        <relationshipName>pocontpicks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pocontpick_portcutdate__c</fullName>
        <label>Cut</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__pocontpick_portrouting2__c</fullName>
        <label>Port Routing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>pocontpick_pr1</fullName>
                </value>
                <value>
                    <fullName>pocontpick_pr2</fullName>
                </value>
                <value>
                    <fullName>pocontainer_pr1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__pocontpick_portrouting__c</fullName>
        <label>Port</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__pocontpick_qtyreq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocontpick_sealnumber__c</fullName>
        <label>Seal Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pocontpick_serialno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Container Serial Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pocontpick_setpointf__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Set Point Requested (F)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocontpick_status__c</fullName>
        <label>Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pocontpick_supreq__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Requisition</label>
        <referenceTo>rstk__supreq__c</referenceTo>
        <relationshipName>pocontpicks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pocontpick_tempcheck__c</fullName>
        <label>Temperature Control Required</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pocontpick_tempseq__c</fullName>
        <label>Select for Shipment</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocontpick_uom__c</fullName>
        <label>UOM</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pocontpick_vendor__c</fullName>
        <label>Vendor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Interim Container Picklist</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Interim_Container_Picklist</fullName>
        <columns>NAME</columns>
        <columns>rstk__pocontpick_div__c</columns>
        <columns>rstk__pocontpick_containerid__c</columns>
        <columns>rstk__pocontpick_desc__c</columns>
        <columns>rstk__pocontpick_serialno__c</columns>
        <columns>rstk__pocontpick_pocontainer__c</columns>
        <columns>rstk__pocontpick_batchno__c</columns>
        <columns>rstk__pocontpick_lotno__c</columns>
        <columns>rstk__pocontpick_expdate__c</columns>
        <columns>rstk__pocontpick_item__c</columns>
        <columns>rstk__pocontpick_qtyreq__c</columns>
        <columns>rstk__pocontpick_ordno__c</columns>
        <columns>rstk__pocontpick_askmaxf__c</columns>
        <columns>rstk__pocontpick_askminf__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Interim Container Picklist</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interim Container Picklist</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>